added company entity, changed fav icon and admin design

--- a/app/config/admin/design.yml
+++ b/app/config/admin/design.yml
@@ -8,3 +8,4 @@ easy_admin:
         assets:
             css:
                 - '/bundles/app/stylesheets/demo.css'
+            favicon: '/bundles/app/img/d.jpg'
